[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
chrono = "0.4.19"
#num-bigint = "0.4.3"
#num-traits = "0.2"
#rand = "0.8.5"
uuid = { version = "0.8.2", features = ["v4"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.2"